--- a/src/index.css
+++ b/src/index.css
@@ -296,13 +296,13 @@ button {
   animation-delay: 0.5s;
 }
 
-/* pay now button*/
-.btn-pay {
+/* back to home button*/
+.btn-backhome {
   --clr-font-main: hsla(0 0% 20% / 100);
   --btn-bg-1: hsla(123, 80%, 45%, 1);
   --btn-bg-2: hsla(145, 63%, 42%, 1);
   --btn-bg-color: hsla(360, 100%, 100%, 1);
-  --radii: 0.5em;
+  --radii: 2em;
   cursor: pointer;
   min-width: 120px;
   min-height: 44px;
@@ -325,7 +325,7 @@ button {
     inset -4px -4px 8px rgba(0, 128, 0, 0.35);
 }
 
-.btn-pay:hover {
+.btn-backhome:hover {
   background-position: left bottom;
   background-image: linear-gradient(
     325deg,
@@ -340,7 +340,7 @@ button {
 }
 
 @media (prefers-reduced-motion: reduce) {
-  .btn-pay {
+  .btn-backhome {
     transition: linear;
   }
 }
@@ -385,4 +385,184 @@ button {
     rgba(99, 88, 238, 1) 94.3%
   );
   transition: all 0.475s;
+}
+
+/* animation effects*/
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.5s ease-in forwards;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.pulse {
+  animation: pulse 1s infinite;
+}
+
+.add-btn-hover-pulse:hover {
+  animation: pulse 1s infinite;
+}
+
+@keyframes zoomIn {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.zoom-in {
+  animation: zoomIn 0.5s ease-in;
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.slide-up {
+  animation: slideUp 0.5s ease forwards;
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.slide-down {
+  animation: slideDown 0.5s ease-out;
+}
+
+@keyframes slideRight {
+  from {
+    transform: translateX(50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.slide-right {
+  animation: slideRight 0.5s ease-out;
+}
+
+@keyframes slideLeft {
+  from {
+    transform: translateX(-20%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.slide-left {
+  animation: slideLeft 0.5s ease-out;
+}
+
+@keyframes bounceDown {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  60% {
+    transform: translateY(20px);
+    opacity: 1;
+  }
+  75% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.bounce-down {
+  animation: bounceDown 0.6s ease-out;
+}
+
+@keyframes backAndForth {
+  0%,
+  100% {
+    transform: translateX(0); /* Start and end at the original position */
+  }
+  50% {
+    transform: translateX(5px); /* Move to the right */
+  }
+}
+
+.back-and-forth {
+  animation: backAndForth 1s infinite ease-in-out; /* Apply the animation infinitely */
+}
+
+/* Payment Loader */
+.payment-loader {
+  display: block;
+  --height-of-loader: 4px;
+  --loader-color: #0071e2;
+  width: 10rem;
+  height: var(--height-of-loader);
+  border-radius: 30px;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.payment-loader::before {
+  content: "";
+  position: absolute;
+  background: var(--loader-color);
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  border-radius: 30px;
+  animation: moving 1s ease-in-out infinite;
+}
+
+@keyframes moving {
+  50% {
+    width: 100%;
+  }
+
+  100% {
+    width: 0;
+    right: 0;
+    left: unset;
+  }
 }
