--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Concert+One&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Nunito", sans-serif;
+}
+
+.logo {
+  font-family: "Concert One", sans-serif;
+}
 
 .no-scroll {
   overflow: hidden;
